# fuel-core-tondi

./: Cargo.toml
crates/chain-config/src/config/snapshots/: fuel_core_chain_config__config__chain__tests__snapshot_local_testnet_config.snap
crates/chain-config/src/config/state/snapshots/: fuel_core_chain_config__config__state__writer__tests__json_snapshot_is_human_readable.snap
crates/fuel-core/: Cargo.toml
crates/fuel-core/src/: combined_database.rs  executor.rs  lib.rs
crates/fuel-core/src/graphql_api/storage/: transactions.rs
crates/fuel-core/src/service/: config.rs
crates/fuel-core/src/service/adapters/graphql_api/: off_chain.rs
crates/services/executor/: Cargo.toml
crates/services/executor/src/: contract_state_hash.rs
crates/services/p2p/: Cargo.toml
crates/services/p2p/src/: dnsaddr_resolution.rs
crates/services/p2p/src/gossipsub/: config.rs
crates/services/tondi-ingot-adapter/: Cargo.toml
crates/services/tondi-ingot-adapter/schema/: README.md  fuelvm_batch.json
crates/services/tondi-ingot-adapter/src/: adapter.rs  config.rs  error.rs  lib.rs  payload.rs  ports.rs  service.rs  storage.rs  sync.rs  types.rs
docs/: L1-L2 Reorg-Proof Sync Paradigms A & B.md  TONDI_SOVEREIGN_ROLLUP_ADAPTATION.md
tests/tests/: graphql_extensions.rs
tests/tests/tx/: upgrade.rs
version-compatibility/forkless-upgrade/: Cargo.toml
